fixed styling alignment on mobile

--- a/css/style.less
+++ b/css/style.less
@@ -7,7 +7,7 @@
 @navbackground:   #f8f8f8;
 
 body {
-  padding-top: 175px;
+  padding-top: 175 px;
 }
 
 
@@ -72,7 +72,7 @@ body {
   }
 
   .results {
-    padding-top: 20px;
+    padding: 20px;
 
     h5 {
       margin: 0px;
@@ -89,9 +89,10 @@ body {
 .filter {
   border-right: 1px solid lightgrey;
   background-color: lightgrey;
+  padding: 12px;
 
   h4 {
-    margin: 13px 0px;
+    margin: 0px;
     cursor: pointer;
     a {
       color: @darkgrey;
@@ -99,6 +100,7 @@ body {
     }
   }
 }
+
 
 .tagline {
   border-right: 1px solid lightgrey;
